y.output
Terminals which are not used

   T
   L


Grammar

    0 $accept: grid $end

    1 @1: /* empty */

    2 grid: GRID ASSIGN NUM NUM @1 STATEMENTS EOP

    3 @2: /* empty */

    4 STATEMENTS: STATEMENTS @2 STATEMENT
    5           | /* empty */

    6 STATEMENT: ID INIT NUM

    7 @3: /* empty */

    8 STATEMENT: ID @3 ASSIGN A_EXPN
    9          | IF_BLOCK ELSE_BLOCK ENDIF
   10          | IF_BLOCK ENDIF

   11 @4: /* empty */

   12 @5: /* empty */

   13 @6: /* empty */

   14 STATEMENT: DO @4 STATEMENTS @5 WHILE @6 BOOL_RET ENDWHILE

   15 @7: /* empty */

   16 @8: /* empty */

   17 STATEMENT: TICK @7 STATEMENTS @8 ENDTICK
   18          | CONF_STMENT
   19          | ST_STMENT
   20          | SCORE_STMENT
   21          | SHAPE_STMENT
   22          | TIME_STMENT
   23          | DELETE_STMENT
   24          | CUSTOM_SHAPE

   25 @9: /* empty */

   26 @10: /* empty */

   27 IF_BLOCK: IF @9 BOOL_RET @10 THEN STATEMENTS

   28 @11: /* empty */

   29 ELSE_BLOCK: ELSE @11 STATEMENTS

   30 @12: /* empty */

   31 A_EXPN: A_EXPN PLUS @12 A_EXPN

   32 @13: /* empty */

   33 A_EXPN: A_EXPN MINUS @13 A_EXPN

   34 @14: /* empty */

   35 A_EXPN: A_EXPN MUL @14 A_EXPN

   36 @15: /* empty */

   37 A_EXPN: A_EXPN DIV @15 A_EXPN
   38       | TERMINALS
   39       | SCORE
   40       | TIME

   41 TERMINALS: ID
   42          | NUM

   43 @16: /* empty */

   44 BOOL_RET: A_EXPN AND @16 A_EXPN

   45 @17: /* empty */

   46 BOOL_RET: A_EXPN OR @17 A_EXPN

   47 @18: /* empty */

   48 BOOL_RET: A_EXPN LE @18 A_EXPN

   49 @19: /* empty */

   50 BOOL_RET: A_EXPN GE @19 A_EXPN

   51 @20: /* empty */

   52 BOOL_RET: A_EXPN GT @20 A_EXPN

   53 @21: /* empty */

   54 BOOL_RET: A_EXPN LT @21 A_EXPN

   55 @22: /* empty */

   56 BOOL_RET: A_EXPN NOTEQUAL @22 A_EXPN

   57 @23: /* empty */

   58 BOOL_RET: A_EXPN EQ @23 A_EXPN

   59 @24: /* empty */

   60 BOOL_RET: NOT @24 A_EXPN
   61         | WIN
   62         | LOST
   63         | PAUSE_BOOL
   64         | TRUE
   65         | FALSE
   66         | GRID A_EXPN A_EXPN

   67 ST_STMENT: START ASSIGN NUM NUM

   68 CONF_STMENT: CONF action KEY

   69 action: UP
   70       | DOWN
   71       | LEFT
   72       | RIGHT
   73       | CLOCKWISE
   74       | ANTICLOCKWISE
   75       | PAUSE

   76 SCORE_STMENT: SCORE ASSIGN NUM
   77             | SCORE PLUS A_EXPN
   78             | SCORE MINUS A_EXPN

   79 SHAPE_STMENT: SHAPE BOOL_RET

   80 TIME_STMENT: TIME PLUS A_EXPN

   81 DELETE_STMENT: DELETE A_EXPN A_EXPN

   82 CUSTOM_SHAPE: LINE1 BOOL_RET BOOL_RET BOOL_RET BOOL_RET LINE2 BOOL_RET BOOL_RET BOOL_RET BOOL_RET LINE3 BOOL_RET BOOL_RET BOOL_RET BOOL_RET LINE4 BOOL_RET BOOL_RET BOOL_RET BOOL_RET


Terminals, with rules where they appear

$end (0) 0
error (256)
PLUS (258) 31 77 80
MINUS (259) 33 78
MUL (260) 35
DIV (261) 37
EQ (262) 58
NOTEQUAL (263) 56
GE (264) 50
GT (265) 52
LE (266) 48
LT (267) 54
ASSIGN (268) 2 8 67 76
GRID (269) 2 66
START (270) 67
CONF (271) 68
NOT (272) 60
SCORE (273) 39 76 77 78
LINE1 (274) 82
LINE2 (275) 82
LINE3 (276) 82
LINE4 (277) 82
DELETE (278) 81
CLOCKWISE (279) 73
ANTICLOCKWISE (280) 74
PAUSE (281) 75
UP (282) 69
ENDIF (283) 9 10
IF (284) 27
THEN (285) 27
DO (286) 14
WHILE (287) 14
TRUE (288) 64
FALSE (289) 65
EOP (290) 2
T (291)
L (292)
ID (293) 6 8 41
NUM (294) 2 6 42 67 76
KEY (295) 68
SHAPE (296) 79
AND (297) 44
OR (298) 46
ENDWHILE (299) 14
TICK (300) 17
ENDTICK (301) 17
PAUSE_BOOL (302) 63
ELSE (303) 29
LOST (304) 62
WIN (305) 61
RIGHT (306) 72
DOWN (307) 70
LEFT (308) 71
TIME (309) 40 80
INIT (310) 6


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
grid (57)
    on left: 2, on right: 0
@1 (58)
    on left: 1, on right: 2
STATEMENTS (59)
    on left: 4 5, on right: 2 4 14 17 27 29
@2 (60)
    on left: 3, on right: 4
STATEMENT (61)
    on left: 6 8 9 10 14 17 18 19 20 21 22 23 24, on right: 4
@3 (62)
    on left: 7, on right: 8
@4 (63)
    on left: 11, on right: 14
@5 (64)
    on left: 12, on right: 14
@6 (65)
    on left: 13, on right: 14
@7 (66)
    on left: 15, on right: 17
@8 (67)
    on left: 16, on right: 17
IF_BLOCK (68)
    on left: 27, on right: 9 10
@9 (69)
    on left: 25, on right: 27
@10 (70)
    on left: 26, on right: 27
ELSE_BLOCK (71)
    on left: 29, on right: 9
@11 (72)
    on left: 28, on right: 29
A_EXPN (73)
    on left: 31 33 35 37 38 39 40, on right: 8 31 33 35 37 44 46 48
    50 52 54 56 58 60 66 77 78 80 81
@12 (74)
    on left: 30, on right: 31
@13 (75)
    on left: 32, on right: 33
@14 (76)
    on left: 34, on right: 35
@15 (77)
    on left: 36, on right: 37
TERMINALS (78)
    on left: 41 42, on right: 38
BOOL_RET (79)
    on left: 44 46 48 50 52 54 56 58 60 61 62 63 64 65 66,
    on right: 14 27 79 82
@16 (80)
    on left: 43, on right: 44
@17 (81)
    on left: 45, on right: 46
@18 (82)
    on left: 47, on right: 48
@19 (83)
    on left: 49, on right: 50
@20 (84)
    on left: 51, on right: 52
@21 (85)
    on left: 53, on right: 54
@22 (86)
    on left: 55, on right: 56
@23 (87)
    on left: 57, on right: 58
@24 (88)
    on left: 59, on right: 60
ST_STMENT (89)
    on left: 67, on right: 19
CONF_STMENT (90)
    on left: 68, on right: 18
action (91)
    on left: 69 70 71 72 73 74 75, on right: 68
SCORE_STMENT (92)
    on left: 76 77 78, on right: 20
SHAPE_STMENT (93)
    on left: 79, on right: 21
TIME_STMENT (94)
    on left: 80, on right: 22
DELETE_STMENT (95)
    on left: 81, on right: 23
CUSTOM_SHAPE (96)
    on left: 82, on right: 24


state 0

    0 $accept: . grid $end

    GRID  shift, and go to state 1

    grid  go to state 2


state 1

    2 grid: GRID . ASSIGN NUM NUM @1 STATEMENTS EOP

    ASSIGN  shift, and go to state 3


state 2

    0 $accept: grid . $end

    $end  shift, and go to state 4


state 3

    2 grid: GRID ASSIGN . NUM NUM @1 STATEMENTS EOP

    NUM  shift, and go to state 5


state 4

    0 $accept: grid $end .

    $default  accept


state 5

    2 grid: GRID ASSIGN NUM . NUM @1 STATEMENTS EOP

    NUM  shift, and go to state 6


state 6

    2 grid: GRID ASSIGN NUM NUM . @1 STATEMENTS EOP

    $default  reduce using rule 1 (@1)

    @1  go to state 7


state 7

    2 grid: GRID ASSIGN NUM NUM @1 . STATEMENTS EOP

    $default  reduce using rule 5 (STATEMENTS)

    STATEMENTS  go to state 8


state 8

    2 grid: GRID ASSIGN NUM NUM @1 STATEMENTS . EOP
    4 STATEMENTS: STATEMENTS . @2 STATEMENT

    EOP  shift, and go to state 9

    $default  reduce using rule 3 (@2)

    @2  go to state 10


state 9

    2 grid: GRID ASSIGN NUM NUM @1 STATEMENTS EOP .

    $default  reduce using rule 2 (grid)


state 10

    4 STATEMENTS: STATEMENTS @2 . STATEMENT

    START   shift, and go to state 11
    CONF    shift, and go to state 12
    SCORE   shift, and go to state 13
    LINE1   shift, and go to state 14
    DELETE  shift, and go to state 15
    IF      shift, and go to state 16
    DO      shift, and go to state 17
    ID      shift, and go to state 18
    SHAPE   shift, and go to state 19
    TICK    shift, and go to state 20
    TIME    shift, and go to state 21

    STATEMENT      go to state 22
    IF_BLOCK       go to state 23
    ST_STMENT      go to state 24
    CONF_STMENT    go to state 25
    SCORE_STMENT   go to state 26
    SHAPE_STMENT   go to state 27
    TIME_STMENT    go to state 28
    DELETE_STMENT  go to state 29
    CUSTOM_SHAPE   go to state 30


state 11

   67 ST_STMENT: START . ASSIGN NUM NUM

    ASSIGN  shift, and go to state 31


state 12

   68 CONF_STMENT: CONF . action KEY

    CLOCKWISE      shift, and go to state 32
    ANTICLOCKWISE  shift, and go to state 33
    PAUSE          shift, and go to state 34
    UP             shift, and go to state 35
    RIGHT          shift, and go to state 36
    DOWN           shift, and go to state 37
    LEFT           shift, and go to state 38

    action  go to state 39


state 13

   76 SCORE_STMENT: SCORE . ASSIGN NUM
   77             | SCORE . PLUS A_EXPN
   78             | SCORE . MINUS A_EXPN

    PLUS    shift, and go to state 40
    MINUS   shift, and go to state 41
    ASSIGN  shift, and go to state 42


state 14

   82 CUSTOM_SHAPE: LINE1 . BOOL_RET BOOL_RET BOOL_RET BOOL_RET LINE2 BOOL_RET BOOL_RET BOOL_RET BOOL_RET LINE3 BOOL_RET BOOL_RET BOOL_RET BOOL_RET LINE4 BOOL_RET BOOL_RET BOOL_RET BOOL_RET

    GRID        shift, and go to state 43
    NOT         shift, and go to state 44
    SCORE       shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    ID          shift, and go to state 48
    NUM         shift, and go to state 49
    PAUSE_BOOL  shift, and go to state 50
    LOST        shift, and go to state 51
    WIN         shift, and go to state 52
    TIME        shift, and go to state 53

    A_EXPN     go to state 54
    TERMINALS  go to state 55
    BOOL_RET   go to state 56


state 15

   81 DELETE_STMENT: DELETE . A_EXPN A_EXPN

    SCORE  shift, and go to state 45
    ID     shift, and go to state 48
    NUM    shift, and go to state 49
    TIME   shift, and go to state 53

    A_EXPN     go to state 57
    TERMINALS  go to state 55


state 16

   27 IF_BLOCK: IF . @9 BOOL_RET @10 THEN STATEMENTS

    $default  reduce using rule 25 (@9)

    @9  go to state 58


state 17

   14 STATEMENT: DO . @4 STATEMENTS @5 WHILE @6 BOOL_RET ENDWHILE

    $default  reduce using rule 11 (@4)

    @4  go to state 59


state 18

    6 STATEMENT: ID . INIT NUM
    8          | ID . @3 ASSIGN A_EXPN

    INIT  shift, and go to state 60

    $default  reduce using rule 7 (@3)

    @3  go to state 61


state 19

   79 SHAPE_STMENT: SHAPE . BOOL_RET

    GRID        shift, and go to state 43
    NOT         shift, and go to state 44
    SCORE       shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    ID          shift, and go to state 48
    NUM         shift, and go to state 49
    PAUSE_BOOL  shift, and go to state 50
    LOST        shift, and go to state 51
    WIN         shift, and go to state 52
    TIME        shift, and go to state 53

    A_EXPN     go to state 54
    TERMINALS  go to state 55
    BOOL_RET   go to state 62


state 20

   17 STATEMENT: TICK . @7 STATEMENTS @8 ENDTICK

    $default  reduce using rule 15 (@7)

    @7  go to state 63


state 21

   80 TIME_STMENT: TIME . PLUS A_EXPN

    PLUS  shift, and go to state 64


state 22

    4 STATEMENTS: STATEMENTS @2 STATEMENT .

    $default  reduce using rule 4 (STATEMENTS)


state 23

    9 STATEMENT: IF_BLOCK . ELSE_BLOCK ENDIF
   10          | IF_BLOCK . ENDIF

    ENDIF  shift, and go to state 65
    ELSE   shift, and go to state 66

    ELSE_BLOCK  go to state 67


state 24

   19 STATEMENT: ST_STMENT .

    $default  reduce using rule 19 (STATEMENT)


state 25

   18 STATEMENT: CONF_STMENT .

    $default  reduce using rule 18 (STATEMENT)


state 26

   20 STATEMENT: SCORE_STMENT .

    $default  reduce using rule 20 (STATEMENT)


state 27

   21 STATEMENT: SHAPE_STMENT .

    $default  reduce using rule 21 (STATEMENT)


state 28

   22 STATEMENT: TIME_STMENT .

    $default  reduce using rule 22 (STATEMENT)


state 29

   23 STATEMENT: DELETE_STMENT .

    $default  reduce using rule 23 (STATEMENT)


state 30

   24 STATEMENT: CUSTOM_SHAPE .

    $default  reduce using rule 24 (STATEMENT)


state 31

   67 ST_STMENT: START ASSIGN . NUM NUM

    NUM  shift, and go to state 68


state 32

   73 action: CLOCKWISE .

    $default  reduce using rule 73 (action)


state 33

   74 action: ANTICLOCKWISE .

    $default  reduce using rule 74 (action)


state 34

   75 action: PAUSE .

    $default  reduce using rule 75 (action)


state 35

   69 action: UP .

    $default  reduce using rule 69 (action)


state 36

   72 action: RIGHT .

    $default  reduce using rule 72 (action)


state 37

   70 action: DOWN .

    $default  reduce using rule 70 (action)


state 38

   71 action: LEFT .

    $default  reduce using rule 71 (action)


state 39

   68 CONF_STMENT: CONF action . KEY

    KEY  shift, and go to state 69


state 40

   77 SCORE_STMENT: SCORE PLUS . A_EXPN

    SCORE  shift, and go to state 45
    ID     shift, and go to state 48
    NUM    shift, and go to state 49
    TIME   shift, and go to state 53

    A_EXPN     go to state 70
    TERMINALS  go to state 55


state 41

   78 SCORE_STMENT: SCORE MINUS . A_EXPN

    SCORE  shift, and go to state 45
    ID     shift, and go to state 48
    NUM    shift, and go to state 49
    TIME   shift, and go to state 53

    A_EXPN     go to state 71
    TERMINALS  go to state 55


state 42

   76 SCORE_STMENT: SCORE ASSIGN . NUM

    NUM  shift, and go to state 72


state 43

   66 BOOL_RET: GRID . A_EXPN A_EXPN

    SCORE  shift, and go to state 45
    ID     shift, and go to state 48
    NUM    shift, and go to state 49
    TIME   shift, and go to state 53

    A_EXPN     go to state 73
    TERMINALS  go to state 55


state 44

   60 BOOL_RET: NOT . @24 A_EXPN

    $default  reduce using rule 59 (@24)

    @24  go to state 74


state 45

   39 A_EXPN: SCORE .

    $default  reduce using rule 39 (A_EXPN)


state 46

   64 BOOL_RET: TRUE .

    $default  reduce using rule 64 (BOOL_RET)


state 47

   65 BOOL_RET: FALSE .

    $default  reduce using rule 65 (BOOL_RET)


state 48

   41 TERMINALS: ID .

    $default  reduce using rule 41 (TERMINALS)


state 49

   42 TERMINALS: NUM .

    $default  reduce using rule 42 (TERMINALS)


state 50

   63 BOOL_RET: PAUSE_BOOL .

    $default  reduce using rule 63 (BOOL_RET)


state 51

   62 BOOL_RET: LOST .

    $default  reduce using rule 62 (BOOL_RET)


state 52

   61 BOOL_RET: WIN .

    $default  reduce using rule 61 (BOOL_RET)


state 53

   40 A_EXPN: TIME .

    $default  reduce using rule 40 (A_EXPN)


state 54

   31 A_EXPN: A_EXPN . PLUS @12 A_EXPN
   33       | A_EXPN . MINUS @13 A_EXPN
   35       | A_EXPN . MUL @14 A_EXPN
   37       | A_EXPN . DIV @15 A_EXPN
   44 BOOL_RET: A_EXPN . AND @16 A_EXPN
   46         | A_EXPN . OR @17 A_EXPN
   48         | A_EXPN . LE @18 A_EXPN
   50         | A_EXPN . GE @19 A_EXPN
   52         | A_EXPN . GT @20 A_EXPN
   54         | A_EXPN . LT @21 A_EXPN
   56         | A_EXPN . NOTEQUAL @22 A_EXPN
   58         | A_EXPN . EQ @23 A_EXPN

    PLUS      shift, and go to state 75
    MINUS     shift, and go to state 76
    MUL       shift, and go to state 77
    DIV       shift, and go to state 78
    EQ        shift, and go to state 79
    NOTEQUAL  shift, and go to state 80
    GE        shift, and go to state 81
    GT        shift, and go to state 82
    LE        shift, and go to state 83
    LT        shift, and go to state 84
    AND       shift, and go to state 85
    OR        shift, and go to state 86


state 55

   38 A_EXPN: TERMINALS .

    $default  reduce using rule 38 (A_EXPN)


state 56

   82 CUSTOM_SHAPE: LINE1 BOOL_RET . BOOL_RET BOOL_RET BOOL_RET LINE2 BOOL_RET BOOL_RET BOOL_RET BOOL_RET LINE3 BOOL_RET BOOL_RET BOOL_RET BOOL_RET LINE4 BOOL_RET BOOL_RET BOOL_RET BOOL_RET

    GRID        shift, and go to state 43
    NOT         shift, and go to state 44
    SCORE       shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    ID          shift, and go to state 48
    NUM         shift, and go to state 49
    PAUSE_BOOL  shift, and go to state 50
    LOST        shift, and go to state 51
    WIN         shift, and go to state 52
    TIME        shift, and go to state 53

    A_EXPN     go to state 54
    TERMINALS  go to state 55
    BOOL_RET   go to state 87


state 57

   31 A_EXPN: A_EXPN . PLUS @12 A_EXPN
   33       | A_EXPN . MINUS @13 A_EXPN
   35       | A_EXPN . MUL @14 A_EXPN
   37       | A_EXPN . DIV @15 A_EXPN
   81 DELETE_STMENT: DELETE A_EXPN . A_EXPN

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76
    MUL    shift, and go to state 77
    DIV    shift, and go to state 78
    SCORE  shift, and go to state 45
    ID     shift, and go to state 48
    NUM    shift, and go to state 49
    TIME   shift, and go to state 53

    A_EXPN     go to state 88
    TERMINALS  go to state 55


state 58

   27 IF_BLOCK: IF @9 . BOOL_RET @10 THEN STATEMENTS

    GRID        shift, and go to state 43
    NOT         shift, and go to state 44
    SCORE       shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    ID          shift, and go to state 48
    NUM         shift, and go to state 49
    PAUSE_BOOL  shift, and go to state 50
    LOST        shift, and go to state 51
    WIN         shift, and go to state 52
    TIME        shift, and go to state 53

    A_EXPN     go to state 54
    TERMINALS  go to state 55
    BOOL_RET   go to state 89


state 59

   14 STATEMENT: DO @4 . STATEMENTS @5 WHILE @6 BOOL_RET ENDWHILE

    $default  reduce using rule 5 (STATEMENTS)

    STATEMENTS  go to state 90


state 60

    6 STATEMENT: ID INIT . NUM

    NUM  shift, and go to state 91


state 61

    8 STATEMENT: ID @3 . ASSIGN A_EXPN

    ASSIGN  shift, and go to state 92


state 62

   79 SHAPE_STMENT: SHAPE BOOL_RET .

    $default  reduce using rule 79 (SHAPE_STMENT)


state 63

   17 STATEMENT: TICK @7 . STATEMENTS @8 ENDTICK

    $default  reduce using rule 5 (STATEMENTS)

    STATEMENTS  go to state 93


state 64

   80 TIME_STMENT: TIME PLUS . A_EXPN

    SCORE  shift, and go to state 45
    ID     shift, and go to state 48
    NUM    shift, and go to state 49
    TIME   shift, and go to state 53

    A_EXPN     go to state 94
    TERMINALS  go to state 55


state 65

   10 STATEMENT: IF_BLOCK ENDIF .

    $default  reduce using rule 10 (STATEMENT)


state 66

   29 ELSE_BLOCK: ELSE . @11 STATEMENTS

    $default  reduce using rule 28 (@11)

    @11  go to state 95


state 67

    9 STATEMENT: IF_BLOCK ELSE_BLOCK . ENDIF

    ENDIF  shift, and go to state 96


state 68

   67 ST_STMENT: START ASSIGN NUM . NUM

    NUM  shift, and go to state 97


state 69

   68 CONF_STMENT: CONF action KEY .

    $default  reduce using rule 68 (CONF_STMENT)


state 70

   31 A_EXPN: A_EXPN . PLUS @12 A_EXPN
   33       | A_EXPN . MINUS @13 A_EXPN
   35       | A_EXPN . MUL @14 A_EXPN
   37       | A_EXPN . DIV @15 A_EXPN
   77 SCORE_STMENT: SCORE PLUS A_EXPN .

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76
    MUL    shift, and go to state 77
    DIV    shift, and go to state 78

    $default  reduce using rule 77 (SCORE_STMENT)


state 71

   31 A_EXPN: A_EXPN . PLUS @12 A_EXPN
   33       | A_EXPN . MINUS @13 A_EXPN
   35       | A_EXPN . MUL @14 A_EXPN
   37       | A_EXPN . DIV @15 A_EXPN
   78 SCORE_STMENT: SCORE MINUS A_EXPN .

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76
    MUL    shift, and go to state 77
    DIV    shift, and go to state 78

    $default  reduce using rule 78 (SCORE_STMENT)


state 72

   76 SCORE_STMENT: SCORE ASSIGN NUM .

    $default  reduce using rule 76 (SCORE_STMENT)


state 73

   31 A_EXPN: A_EXPN . PLUS @12 A_EXPN
   33       | A_EXPN . MINUS @13 A_EXPN
   35       | A_EXPN . MUL @14 A_EXPN
   37       | A_EXPN . DIV @15 A_EXPN
   66 BOOL_RET: GRID A_EXPN . A_EXPN

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76
    MUL    shift, and go to state 77
    DIV    shift, and go to state 78
    SCORE  shift, and go to state 45
    ID     shift, and go to state 48
    NUM    shift, and go to state 49
    TIME   shift, and go to state 53

    A_EXPN     go to state 98
    TERMINALS  go to state 55


state 74

   60 BOOL_RET: NOT @24 . A_EXPN

    SCORE  shift, and go to state 45
    ID     shift, and go to state 48
    NUM    shift, and go to state 49
    TIME   shift, and go to state 53

    A_EXPN     go to state 99
    TERMINALS  go to state 55


state 75

   31 A_EXPN: A_EXPN PLUS . @12 A_EXPN

    $default  reduce using rule 30 (@12)

    @12  go to state 100


state 76

   33 A_EXPN: A_EXPN MINUS . @13 A_EXPN

    $default  reduce using rule 32 (@13)

    @13  go to state 101


state 77

   35 A_EXPN: A_EXPN MUL . @14 A_EXPN

    $default  reduce using rule 34 (@14)

    @14  go to state 102


state 78

   37 A_EXPN: A_EXPN DIV . @15 A_EXPN

    $default  reduce using rule 36 (@15)

    @15  go to state 103


state 79

   58 BOOL_RET: A_EXPN EQ . @23 A_EXPN

    $default  reduce using rule 57 (@23)

    @23  go to state 104


state 80

   56 BOOL_RET: A_EXPN NOTEQUAL . @22 A_EXPN

    $default  reduce using rule 55 (@22)

    @22  go to state 105


state 81

   50 BOOL_RET: A_EXPN GE . @19 A_EXPN

    $default  reduce using rule 49 (@19)

    @19  go to state 106


state 82

   52 BOOL_RET: A_EXPN GT . @20 A_EXPN

    $default  reduce using rule 51 (@20)

    @20  go to state 107


state 83

   48 BOOL_RET: A_EXPN LE . @18 A_EXPN

    $default  reduce using rule 47 (@18)

    @18  go to state 108


state 84

   54 BOOL_RET: A_EXPN LT . @21 A_EXPN

    $default  reduce using rule 53 (@21)

    @21  go to state 109


state 85

   44 BOOL_RET: A_EXPN AND . @16 A_EXPN

    $default  reduce using rule 43 (@16)

    @16  go to state 110


state 86

   46 BOOL_RET: A_EXPN OR . @17 A_EXPN

    $default  reduce using rule 45 (@17)

    @17  go to state 111


state 87

   82 CUSTOM_SHAPE: LINE1 BOOL_RET BOOL_RET . BOOL_RET BOOL_RET LINE2 BOOL_RET BOOL_RET BOOL_RET BOOL_RET LINE3 BOOL_RET BOOL_RET BOOL_RET BOOL_RET LINE4 BOOL_RET BOOL_RET BOOL_RET BOOL_RET

    GRID        shift, and go to state 43
    NOT         shift, and go to state 44
    SCORE       shift, and go to state 45
    TRUE        shift, and go to state 46
    FALSE       shift, and go to state 47
    ID          shift, and go to state 48
    NUM         shift, and go to state 49
    PAUSE_BOOL  shift, and go to state 50
    LOST        shift, and go to state 51
    WIN         shift, and go to state 52
    TIME        shift, and go to state 53

    A_EXPN     go to state 54
    TERMINALS  go to state 55
    BOOL_RET   go to state 112


state 88

   31 A_EXPN: A_EXPN . PLUS @12 A_EXPN
   33       | A_EXPN . MINUS @13 A_EXPN
   35       | A_EXPN . MUL @14 A_EXPN
   37       | A_EXPN . DIV @15 A_EXPN
   81 DELETE_STMENT: DELETE A_EXPN A_EXPN .

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76
    MUL    shift, and go to state 77
    DIV    shift, and go to state 78

    $default  reduce using rule 81 (DELETE_STMENT)


state 89

   27 IF_BLOCK: IF @9 BOOL_RET . @10 THEN STATEMENTS

    $default  reduce using rule 26 (@10)

    @10  go to state 113


state 90

    4 STATEMENTS: STATEMENTS . @2 STATEMENT
   14 STATEMENT: DO @4 STATEMENTS . @5 WHILE @6 BOOL_RET ENDWHILE

    WHILE     reduce using rule 12 (@5)
    $default  reduce using rule 3 (@2)

    @2  go to state 10
    @5  go to state 114


state 91

    6 STATEMENT: ID INIT NUM .

    $default  reduce using rule 6 (STATEMENT)


state 92

    8 STATEMENT: ID @3 ASSIGN . A_EXPN

    SCORE  shift, and go to state 45
    ID     shift, and go to state 48
    NUM    shift, and go to state 49
    TIME   shift, and go to state 53

    A_EXPN     go to state 115
    TERMINALS  go to state 55


state 93

    4 STATEMENTS: STATEMENTS . @2 STATEMENT
   17 STATEMENT: TICK @7 STATEMENTS . @8 ENDTICK
